src/objects/HW_Change_Request_Base__c.object
<CustomObject>
    <description>Base object to capture change request detail and early input from subject matter experts.</description>
    <fields>
        <fullName>Active_Counter__c</fullName>
        <description>Field used for gaining a grand summary of active records within dash board reporting.</description>
        <formula>IF( Closed_Month__c =&quot;-&quot; , 1, 0)</formula>
        <label>Active Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Record_ID__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Impact__c</fullName>
        <label>Business Impact</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Manager_Comments__c</fullName>
        <label>Category Manager Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_Manager_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Category Manger to ensure the change is pertinent to the business.</description>
        <label>Category Manager Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Description__c</fullName>
        <description>Clear description of change including; comparison data and all historical data of similar approved changes (if available).</description>
        <label>Change Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Request_Stage__c</fullName>
        <label>Change Request Stage</label>
        <picklist>
            <picklistValues>
                <fullName>New Record</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eng Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eng Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECR Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting EOL Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Type__c</fullName>
        <description>Select the change type family that closest relates to the change request</description>
        <inlineHelpText>EOL-if EOL last purchase date and last manufacture date to be visible
Design- change leading to alteration of function
Fab- Wafer fab for IC
Location- final packaging or test of component
Material- update of core materials used for production</inlineHelpText>
        <label>Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>2nd Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_Month__c</fullName>
        <description>Conversion of HCR Complete Date to MM-YYYY format.  For use in key metric reporting.</description>
        <formula>TEXT(MONTH(DATEVALUE(HCR_Complete_Date__c)))  &amp; &quot;-&quot; &amp;  TEXT (YEAR(DATEVALUE( HCR_Complete_Date__c  )))</formula>
        <label>Closed Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Month__c</fullName>
        <description>Conversion of entry date to MM-YYYY format.  Field used for key volume metric.</description>
        <formula>TEXT (YEAR( Entry_Date__c )) &amp; &quot;-&quot; &amp; IF( MONTH(Entry_Date__c )&lt;10, &quot;0&quot;&amp;TEXT( MONTH(Entry_Date__c )), TEXT( MONTH(Entry_Date__c )))</formula>
        <label>Create Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <description>Sum of Month Number + Year Number to provide a proper list order within reports.</description>
        <formula>MONTH( Entry_Date__c ) +  YEAR(Entry_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ECR_Approval_Date__c</fullName>
        <description>Date ECR number was completed within MotoPDM</description>
        <inlineHelpText>Date ECR number was completed within MotoPDM</inlineHelpText>
        <label>ECR Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effected_Part_Numbers__c</fullName>
        <description>Enter each effected part number separated by comma.</description>
        <label>Effected Part Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>The &apos;need-by&apos; date provided by internal requester or supplier from Schedule Share PCN</description>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date request is released for approval, NOT just entered.</description>
        <label>Entry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entry_Month__c</fullName>
        <description>Number conversion for entry Date</description>
        <formula>MONTH( Entry_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entry Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue__c</fullName>
        <description>Estimated gross savings, revenue from supply shortage/avoidance, or savings/cost avoidance from quality improvement.</description>
        <inlineHelpText>Estimated gross savings, revenue from supply shortage/avoidance, or savings/cost avoidance from quality improvement.</inlineHelpText>
        <label>Estimated Revenue</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request is externally generated</description>
        <label>External Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_HCR_Status__c</fullName>
        <description>Field for reporting the top most status of request</description>
        <inlineHelpText>Change administrator to maintain throughout process.</inlineHelpText>
        <label>Final HCR Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Please Select</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HCR_Complete_Date__c</fullName>
        <description>Date stamp for tracking HCR record completion.</description>
        <label>HCR Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HCR_Cycle_Time__c</fullName>
        <description>Field recording the cycle time from HCR record creation to the time of setting Change Request stage to &apos;Complete&apos;</description>
        <formula>IF(  ISBLANK( HCR_Complete_Date__c ) ,  NOW() - CreatedDate,  HCR_Complete_Date__c - CreatedDate)</formula>
        <label>HCR Cycle Time</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HCR_Top_Status_Comment__c</fullName>
        <description>Master comment field to track overall approval status.</description>
        <inlineHelpText>Top status of approval, ensure to add road-blocks or critical dates to comments.  Important field for dashboard use.</inlineHelpText>
        <label>HCR Top Status Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impacted_Components_and_Where_Use__c</fullName>
        <description>Listing of component numbers and the impacted products</description>
        <inlineHelpText>Paste information from CRIS mass part report</inlineHelpText>
        <label>Impacted Components and Where Use</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Request_Core_Id__c</fullName>
        <description>Core Id for internal requester</description>
        <label>Internal Request Core Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request is internally generated.</description>
        <label>Internal Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Requester_eMail__c</fullName>
        <label>Internal Requester eMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Manufacture_Date__c</fullName>
        <description>If change type is EOL, enter the last manufacture date provided by supplier</description>
        <label>Last Manufacture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_PO_Date__c</fullName>
        <description>If change type is EOL, enter the last accepted PO date.</description>
        <label>Last PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MotoPDM_ECR_Number__c</fullName>
        <description>ECR number associated with approval of the change.</description>
        <inlineHelpText>ECR number associated with approval of the change.</inlineHelpText>
        <label>MotoPDM ECR Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MotoPDM_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member of the MotoPDM PCM team responsible for entry of the final ECR to track change acceptance.</description>
        <inlineHelpText>Member of the MotoPDM PCM team responsible for entry of the final ECR to track change acceptance.</inlineHelpText>
        <label>MotoPDM Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_Change_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Need_By__c</fullName>
        <description>Initial date the change requester entered.  Effective date will be the &apos;living&apos; date when change is formally approved.</description>
        <inlineHelpText>Initial date the change requester entered.  Effective date will be the &apos;living&apos; date when change is formally approved.</inlineHelpText>
        <label>Original Need By:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Part_Category__c</fullName>
        <description>Global part category</description>
        <label>Part Category</label>
        <picklist>
            <picklistValues>
                <fullName>Batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batteries/Coins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passives/Crystal Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crystal Filters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLLO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical, Packaging, Logistics &amp; Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics &amp; Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical &amp; Sub-Assemblies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acoustics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antennas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flip &amp; Slider Assemblies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hinges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheet Metal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precision Stamping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extrusions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Die Casts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Die Cuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keypads Stamped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastics/Paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keypads/Rubber &amp; Die Cuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCB/Rigid Flex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_1_Approval_Path__c</fullName>
        <description>Approval path is a base line description of approval requirements.  See help text for detail.  Remember detail can be shared via comment section or attached document.</description>
        <label>Product 1 Approval Path</label>
        <picklist>
            <controllingField>Product_1_Test_Required__c</controllingField>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Part</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve by Similarity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineer Pilot + FLT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factory ALT + FLT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLT Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_1_Eng_Comment__c</fullName>
        <description>Supporting comments for product 1 validation plan, such as who will receive pilot XCVR.</description>
        <label>Product 1 Eng Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_1_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product engineer responsible for establishing HW validation plan, product 1.</description>
        <label>Product 1 Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_Change_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_1_Pilot_Qty__c</fullName>
        <description>Number of engineering units required for assessment.</description>
        <label>Product 1 Pilot Qty</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_1_Test_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is specific testing required for product 1.  If approval path is via similarity to other product, then box to remain unchecked.</description>
        <inlineHelpText>Only select test required if product level testing is absolutely necessary.  Rejection or qualification via similarity to other product testing does not warrant selection of this field.</inlineHelpText>
        <label>Product 1 Test Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product utilizing a change request component.  Owned by product engineer 1.</description>
        <label>Product 1</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>HW Change Requests</relationshipLabel>
        <relationshipName>HW_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Priority__c</fullName>
        <description>Business priority as related to cost, quality, or supply continuity.</description>
        <inlineHelpText>Critical- significant cost avoidance, reduction, or good-to improvement.  Needed in &lt; 40 days.
Moderate- significant cost avoidance, reduction, or good-to improvement.  Needed in &lt; 60 days.
Low- common change request.  Needed in &lt; 90 days.</inlineHelpText>
        <label>Request Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SC_Operations_Comment__c</fullName>
        <description>Field for SC operations comment about EOL request.</description>
        <inlineHelpText>Field size 255 characters.  Please enter brief comment.  If more detail required save a note or upload documentation at the bottom of this record.</inlineHelpText>
        <label>SC Operations Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SC_Operations_Status__c</fullName>
        <description>SC Operations field for highlighting acceptance/rejection of EOL notice.</description>
        <inlineHelpText>Approval will close this record and Schedule Share PCN without further processing.
Rejection will reject this record and Schedule Share PCN without further processing.</inlineHelpText>
        <label>SC Operations Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SDE_Comments__c</fullName>
        <label>SDE Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDE_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SDE owner for category and supplier</description>
        <label>SDE Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDE_Risk_Level_1__c</fullName>
        <description>Highest possible risk to product performance or product quality.</description>
        <label>SDE Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SME_Comments__c</fullName>
        <label>SME Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SME_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Component/Category design expert.  Add to routing when change type is material or design related.</description>
        <label>SME Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HW_Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SME_Risk_Level_1__c</fullName>
        <description>Highest possible risk to product performance or product quality.</description>
        <label>SME Risk Level</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Name__c</fullName>
        <description>First and Last Name of supplier contact</description>
        <label>Supplier Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Id__c</fullName>
        <description>Supplier Id associated to change</description>
        <label>Supplier Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <description>Supplier name associated to supplier id</description>
        <label>Supplier Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_PCN__c</fullName>
        <description>Supplier PCN from Schedule Share notification</description>
        <label>Supplier PCN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Phone__c</fullName>
        <description>Internal requester or supplier contact phone number from PCN</description>
        <label>Supplier Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Supplier_eMail__c</fullName>
        <description>eMail of internal requester or supplier who released schedule share PCN</description>
        <label>Supplier eMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>System_Base_Request_Id__c</fullName>
        <formula>BLANKVALUE( Name , &quot;None Created&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Base Request Id</label>
        <type>Text</type>
    </fields>
    <label>HW Change Request  Base</label>
    <listViews>
        <fullName>ALL2</fullName>
        <columns>Entry_Date__c</columns>
        <columns>Request_Priority__c</columns>
        <columns>NAME</columns>
        <columns>HCR_Cycle_Time__c</columns>
        <columns>Supplier_PCN__c</columns>
        <columns>Change_Request_Stage__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Part_Category__c</columns>
        <columns>Supplier_Id__c</columns>
        <columns>HCR_Top_Status_Comment__c</columns>
        <columns>Last_Manufacture_Date__c</columns>
        <columns>Last_PO_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Effected_Part_Numbers__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Final_HCR_Status__c</field>
            <operation>equals</operation>
            <value>In Process</value>
        </filters>
        <label>ALL (open)</label>
    </listViews>
    <listViews>
        <fullName>ALL_2013_2014_Qualcomm</fullName>
        <columns>Entry_Date__c</columns>
        <columns>NAME</columns>
        <columns>Supplier_PCN__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Final_HCR_Status__c</columns>
        <columns>HCR_Cycle_Time__c</columns>
        <columns>Change_Request_Stage__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Part_Category__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Supplier_Id__c</columns>
        <columns>HCR_Top_Status_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Entry_Date__c</field>
            <operation>greaterOrEqual</operation>
        </filters>
        <filters>
            <field>Supplier_Id__c</field>
            <operation>equals</operation>
            <value>1009152</value>
        </filters>
        <label>ALL 2013_2014_Qualcomm</label>
    </listViews>
    <listViews>
        <fullName>ALL_EOL_in_Process</fullName>
        <columns>Supplier_Name__c</columns>
        <columns>NAME</columns>
        <columns>HCR_Cycle_Time__c</columns>
        <columns>Effected_Part_Numbers__c</columns>
        <columns>Supplier_PCN__c</columns>
        <columns>Entry_Date__c</columns>
        <columns>Last_PO_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Last_Manufacture_Date__c</columns>
        <columns>SC_Operations_Comment__c</columns>
        <columns>HCR_Top_Status_Comment__c</columns>
        <columns>Change_Request_Stage__c</columns>
        <columns>Request_Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Type__c</field>
            <operation>equals</operation>
            <value>EOL</value>
        </filters>
        <filters>
            <field>Final_HCR_Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,Rejected</value>
        </filters>
        <label>EOL in Process</label>
    </listViews>
    <listViews>
        <fullName>ALL_HCR_In_Process_90_days</fullName>
        <columns>Request_Priority__c</columns>
        <columns>NAME</columns>
        <columns>Supplier_PCN__c</columns>
        <columns>HCR_Cycle_Time__c</columns>
        <columns>HCR_Top_Status_Comment__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Part_Category__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Supplier_Id__c</columns>
        <columns>Last_Manufacture_Date__c</columns>
        <columns>Last_PO_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request_Stage__c</field>
            <operation>notEqual</operation>
            <value>ECR Released,Complete</value>
        </filters>
        <filters>
            <field>HCR_Cycle_Time__c</field>
            <operation>lessThan</operation>
            <value>90.1</value>
        </filters>
        <filters>
            <field>Change_Type__c</field>
            <operation>notEqual</operation>
            <value>EOL</value>
        </filters>
        <label>ALL HCR In-Process &lt;90 days</label>
    </listViews>
    <listViews>
        <fullName>ALL_HCR_not_complete</fullName>
        <columns>NAME</columns>
        <columns>Effected_Part_Numbers__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Supplier_PCN__c</columns>
        <columns>SC_Operations_Comment__c</columns>
        <columns>HCR_Cycle_Time__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>HCR_Top_Status_Comment__c</columns>
        <columns>Change_Request_Stage__c</columns>
        <columns>Part_Category__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Request_Priority__c</columns>
        <columns>Impacted_Components_and_Where_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Change_Request_Stage__c</field>
            <operation>notEqual</operation>
            <value>ECR Released,Complete</value>
        </filters>
        <filters>
            <field>Change_Type__c</field>
            <operation>notEqual</operation>
            <value>EOL</value>
        </filters>
        <label>ALL HCR In-Process (non EOL)</label>
    </listViews>
    <listViews>
        <fullName>Fairchild_PCN</fullName>
        <columns>NAME</columns>
        <columns>Effected_Part_Numbers__c</columns>
        <columns>Supplier_Name__c</columns>
        <columns>Supplier_PCN__c</columns>
        <columns>HCR_Cycle_Time__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>SC_Operations_Comment__c</columns>
        <columns>HCR_Top_Status_Comment__c</columns>
        <columns>Change_Request_Stage__c</columns>
        <columns>Part_Category__c</columns>
        <columns>Change_Type__c</columns>
        <columns>Request_Priority__c</columns>
        <columns>Impacted_Components_and_Where_Use__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Supplier_Name__c</field>
            <operation>contains</operation>
            <value>Fairchild</value>
        </filters>
        <filters>
            <field>Change_Request_Stage__c</field>
            <operation>notEqual</operation>
            <value>ECR Released,Complete</value>
        </filters>
        <filters>
            <field>Change_Type__c</field>
            <operation>notEqual</operation>
            <value>EOL</value>
        </filters>
        <label>Fairchild PCN</label>
    </listViews>
    <nameField>
        <displayFormat>HCR-{0000000}</displayFormat>
        <label>HW Change Request  Base Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HW Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>